[project]
name = "nostalgia-visualizer"
version = "0.1.0"
description = "Reusable Python library and CLI for glitch-style single-song music visualizers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pygame>=2.6.1",
    "sounddevice>=0.5.2",
    "tqdm>=4.67.3",
]

[project.scripts]
nostalgia-visualizer = "nostalgia_visualizer.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
